# time_slippage_check

./: BTCUSDT_slippage_check.ipynb  pyproject.toml
src/: load_data.py
